--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,3 +1,7 @@
 SECRET_KEY=YOUR_SECRET_KEY
 DEBUG=1
 STRIPE_SECRET_KEY=SECRET_KEY
+DB_NAME=name
+DB_HOST=username.db.elephantsql.com
+DB_USER=username
+DB_PASSWORD=password
