--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ Django==4.2.7
 django-jazzmin==2.6.0
 django-rest-swagger==2.2.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
 drf-spectacular==0.26.5
 idna==3.4
 inflection==0.5.1
@@ -18,6 +19,8 @@ jsonschema-specifications==2023.7.1
 load-dotenv==0.1.0
 MarkupSafe==2.1.3
 openapi-codec==1.3.2
+psycopg2==2.9.9
+PyJWT==2.8.0
 python-dotenv==1.0.0
 pytz==2023.3.post1
 PyYAML==6.0.1
@@ -26,6 +29,7 @@ requests==2.31.0
 rpds-py==0.12.0
 simplejson==3.19.2
 sqlparse==0.4.4
+stripe==7.6.0
 typing-extensions==4.8.0
 uritemplate==4.1.1
 urllib3==2.0.7
