--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "element-plus": "^2.4.2",
+    "jwt-decode": "^4.0.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
