--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.3.2
 coreapi==2.3.3
 coreschema==0.0.4
 Django==4.2.7
+django-cors-headers==4.3.1
 django-jazzmin==2.6.0
 django-rest-swagger==2.2.0
 djangorestframework==3.14.0
@@ -19,6 +20,7 @@ jsonschema-specifications==2023.7.1
 load-dotenv==0.1.0
 MarkupSafe==2.1.3
 openapi-codec==1.3.2
+Pillow==10.1.0
 psycopg2==2.9.9
 PyJWT==2.8.0
 python-dotenv==1.0.0
