--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
-SECRET_KEY=django-insecure--hus=h07)s)2=o2u2)!ilbp0+@8g+4&f0=a(%6xrziaz6*fr@i
-DEBUG=1
-STRIPE_SECRET_KEY=prod_P36gW2hQ6E5en6
-DB_NAME=cmxxulav
-DB_HOST=berry.db.elephantsql.com
-DB_USER=cmxxulav
-DB_PASSWORD=pjnlgbLTsI9Rb9ZW1wkabSQlTo3AC1Dw
+SECRET_KEY=
+DEBUG=
+STRIPE_SECRET_KEY=
+DB_NAME=
+DB_HOST=
+DB_USER=
+DB_PASSWORD=
